; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/saa7134/extr_saa7134-video.c_saa7134_resource.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/saa7134/extr_saa7134-video.c_saa7134_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.saa7134_fh = type { i64 }

@V4L2_BUF_TYPE_VIDEO_CAPTURE = common dso_local global i64 0, align 8
@RESOURCE_VIDEO = common dso_local global i32 0, align 4
@V4L2_BUF_TYPE_VBI_CAPTURE = common dso_local global i64 0, align 8
@RESOURCE_VBI = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.saa7134_fh*)* @saa7134_resource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @saa7134_resource(%struct.saa7134_fh* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.saa7134_fh*, align 8
  store %struct.saa7134_fh* %0, %struct.saa7134_fh** %3, align 8
  %4 = load %struct.saa7134_fh*, %struct.saa7134_fh** %3, align 8
  %5 = getelementptr inbounds %struct.saa7134_fh, %struct.saa7134_fh* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @V4L2_BUF_TYPE_VIDEO_CAPTURE, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @RESOURCE_VIDEO, align 4
  store i32 %10, i32* %2, align 4
  br label %21

11:                                               ; preds = %1
  %12 = load %struct.saa7134_fh*, %struct.saa7134_fh** %3, align 8
  %13 = getelementptr inbounds %struct.saa7134_fh, %struct.saa7134_fh* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @V4L2_BUF_TYPE_VBI_CAPTURE, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %11
  %18 = load i32, i32* @RESOURCE_VBI, align 4
  store i32 %18, i32* %2, align 4
  br label %21

19:                                               ; preds = %11
  %20 = call i32 (...) @BUG()
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %19, %17, %9
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @BUG(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
